Integrate Fortify with Jenkins (#599)